@@ -1,6 +1,6 @@
 DIST shotwell-0.30.4.tar.xz 6449848 BLAKE2B 071358d4053a09cac0fc37b90f2dc0f5fcdd374cda616acaa1b234b86901c6529c622da93ad4485802461c1cc59c2475d6a9f5fcca5e38b7afac26e90a563b85 SHA512 a998d8880fca1907c5859744651cf7948db676db1e1fb2205ae9a9aaa0ba5b3b543d9fe29f758469cec11df79efb57de6a81f4b4c64c90a052d9006baced7d21
 DIST shotwell-0.31.0.tar.xz 6482576 BLAKE2B b9e9cc3d520777940fe60212feabb851e504b5c6347a2e707b2f456ee971a35ff633f494256a4635a7d4ea3ea390940202220bd32e31f1e332e3e6a3e8af0088 SHA512 09e3a5f6eda7a1253b3ac62c4315fbc7edf1de0c7f1ee7e61438607cab39ac9d403d551f9d65c2faf7388ac0deaf3f70b13e618c006ff84a5decbf5492827718
-EBUILD shotwell-0.30.4.ebuild 1819 BLAKE2B db9f8909b035a0bd17d905c742e0d7aa7f7ad6cd1a34b8c1b6d00f925946c4e52a1bb6f2077908a44872d6b6ed34b1aecde1be4188a6bab759b485054eb8d623 SHA512 183031341da9040b6fd25f878017da68001a0d85e11d8bf7eec991ef5afeba77820deea70a62472a072c85157cd9e1f56244b73a2ebca1467474352303244b09
-EBUILD shotwell-0.31.0.ebuild 1969 BLAKE2B 9a665d16e8566047f40e57cdc3388eb9056434dfa9ea0a7ac99944ed24c839af4e367b5d3b8ef7c9cf9a1d283380fa620cf10641a576e189ba2b03cf39e8d902 SHA512 f47d56adb6f748f4f340bc2afeb8bdb9323c60e640aaf34b36b7dcfd21a6a4043a37895ae08755e1d61c74d75aec2d5903eb96f191d2b0ce0c06a899d227b4e0
-MISC ChangeLog 274 BLAKE2B 24629c187010d6912bf80867f80eff704b07dab02029f3134a499a022b302cf6185bdac02a06532317d213953964151eccc91e582f39371370b3f38e7c3b21f6 SHA512 49707fe0613c7c587a3b1957945ffd71d37927fa0799fd2a35fdbde4cafbf261d7d327abf5273e99b2f338abccfc633994a92a294fbe56b3c21f672ccabdc92e
+EBUILD shotwell-0.30.4.ebuild 1755 BLAKE2B bb64d910daa313e385f5aa14d267ee0937e3df141559b62055f1d5f0601bfce3b1267f163e35dfb9b903ba1895a9d40f8dbb80b1751fe2ad3622b4c85125ae90 SHA512 a47b1c1593ad19be6c98fc2fa36e9c125eac7a57b368d90ba5beb09cfc4b2d301f277b593d3548630711aa6bd2113ef2199177c57e27b2eae59422289267b9f7
+EBUILD shotwell-0.31.0.ebuild 1951 BLAKE2B 009ea40e96623839ea97b4742cba088e4f4eb9f1a444e66a1d98f3a1c0ff84e7be6343f2e5cafb574a0d404e4b8cea10c4eda39f386149a31f3eace22f3b2800 SHA512 a3c068a340ad6e183e7633ab6c0deee20f309cf6338104f4349dabb979ba3edb0c48ef48c5f41de6b747b886bdb8e3a112823bed4df9c93edc23eeab758b2322
+MISC ChangeLog 359 BLAKE2B e9d19713775f7e22a8c96f8d94e56507968564d6974ed843793eadf54e99086748af946d2f6fbd52887d17a75426e883eee19aa7b11a48a56c0f50677608b3ef SHA512 21b714497f589f461c9b2e355de635a98eefc9f871a10a7b8d580f081977a6922c760eaf465865e7933091e593285d45c97f7b1c3c00bf6095a215b93db4ce5e
 MISC metadata.xml 915 BLAKE2B 7f83fe936f9a575c6dd12b014007cd97c5a8ada9aa5e55ddeaddefa4eb05d724a068c81d2f6f41c5b1bae01ed2c4326eb5eba5d4bdccf48619edeb43a8eaabfd SHA512 1b226f7fabfd7f5ee4d82b28ce2998273225319b055c01509cc5e493fdc037941c0edd0099df5dada00228fb225bf5e35d0035d3cd244890ad0cbd929b84d214
