@@ -1,3 +1,6 @@
+  10 Aug 2019;  <bemeurer@gentoo.org> shotwell-0.30.4.ebuild:
+  media-gfx/shotwell:
+
 *shotwell-0.31.0 (10 Aug 2019)
 
   10 Aug 2019;  <bemeurer@gentoo.org> +shotwell-0.31.0.ebuild:
